Fixed errors in Financial Manager

--- a/app/src/main/res/layout/activity_crop_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_bill_manager.xml
@@ -522,7 +522,8 @@
                         android:layout_height="80dp"
                         android:background="@drawable/input_shapes"
                         android:gravity="start"
-                        android:text="Enter.." />
+                        android:hint="Enter.."
+                        android:textSize="12sp"/>
                 </LinearLayout>
                            </LinearLayout>
 
