--- a/app/src/main/res/layout/content_crop_estimate_preview.xml
+++ b/app/src/main/res/layout/content_crop_estimate_preview.xml
@@ -29,13 +29,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
-
+                        android:id="@+id/text_view_crop_invoice_estimate_farm_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Karlin Farms"
                          android:textSize="12sp" android:textColor="@color/textColor"
                         />
                     <TextView
+                        android:id="@+id/text_view_crop_invoice_estimate_user_street"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Namungona"
@@ -46,11 +47,13 @@
                         android:orientation="horizontal"
                          android:textSize="12sp" android:textColor="@color/textColor">
                         <TextView
+                            android:id="@+id/text_view_crop_invoice_estimate_user_city"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Kampala"
                              android:textSize="12sp" android:textColor="@color/textColor"/>
                         <TextView
+                            android:id="@+id/text_view_crop_invoice_estimate_user_country"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Uganda"
@@ -525,8 +528,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-
-                 android:textSize="12sp" android:textColor="@color/textColor"
+                android:textSize="12sp"
+                android:textColor="@color/textColor"
                 android:text="@string/looking_forward_for_your_business" />
 
 
