--- a/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.CropPaymentBillManagerActivity">
+    tools:context=".activities.CropBillPaymentManagerActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -32,9 +32,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:text="@string/payment_date"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorPrimary"
+                  
+                    android:textSize="14sp"
+                    android:textColor="@color/textColor"
                     />
 
                 <EditText
@@ -56,6 +56,75 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+
+
+                >
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Bill"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
+                    android:layout_marginRight="5dp"
+                    />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes_grey_spinner"
+                    android:orientation="vertical"
+                    android:padding="2.4dp">
+                    <Spinner
+                        android:id="@+id/txt_crop_payment_bill_select_bill"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:textSize="14sp"
+
+
+                        />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+
+
+                >
+
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Select Supplier"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
+                    android:layout_marginRight="5dp"
+                    />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes_grey_spinner"
+                    android:orientation="vertical"
+                    android:padding="2.4dp">
+                    <Spinner
+                        android:id="@+id/sp_crop_payment_bill_supplier"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+
+
+                        />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:layout_marginBottom="10dp"
                 >
 
@@ -64,10 +133,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Payment Made"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
+                    android:textColor="@color/textColor"
+                  
                     android:layout_weight="0.5"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -78,14 +147,14 @@
                     >
 
                     <TextView
-                        android:id="@+id/crop_cost"
+                        android:id="@+id/txt_crop_payment_bill_currency"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="@string/ugx"
                         android:layout_weight="0.2"
                         android:textSize="14sp"
                         android:textAlignment="center"
-                        android:textStyle="bold"
+                      
                         android:gravity="center_vertical"
 
                         />
@@ -119,9 +188,9 @@
                     android:layout_height="wrap_content"
                     android:text="@string/payment_mode"
                     android:layout_weight="0.6"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:textColor="@color/textColor"
+                  
+                    android:textSize="14sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -135,7 +204,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp"
                     android:entries="@array/sp_crop_income_expense_payment_mode"
                     />
@@ -149,57 +218,21 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginBottom="10dp">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
 
-                    >
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/select_bill"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:layout_marginRight="5dp"
-                        />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes_grey_spinner"
-                        android:orientation="vertical"
-                        android:padding="2.4dp">
-                    <Spinner
-                        android:id="@+id/txt_crop_payment_bill_select_bill"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-
-                        android:textSize="14sp"
-
-
-                        android:layout_marginRight="10dp"
-
-                        />
-                    </LinearLayout>
-                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_weight="0.5"
                     >
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/ref_no"
-                        android:textColor="@color/colorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textColor="@color/textColor"
+                      
+                        android:textSize="14sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_payment_bill_reference_number"
@@ -209,7 +242,7 @@
                         android:hint="Enter.."
                         android:textSize="14sp"
                         android:background="@drawable/input_shapes"
-                        android:inputType="numberDecimal"
+                        android:inputType="text"
 
                         />
                 </LinearLayout>
@@ -227,15 +260,15 @@
                     android:layout_height="wrap_content"
                     android:text="@string/notes"
                     android:layout_weight="0.5"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:textSize="16sp" />
+                    android:textColor="@color/textColor"
+                  
+                    android:textSize="14sp" />
 
                 <EditText
                     android:id="@+id/txt_crop_payment_bill_notes"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                   android:hint="Enter.."
+                    android:hint="Enter.."
                     android:gravity="start"
                     android:inputType="textMultiLine"
                     android:textSize="14sp"
