--- a/app/src/main/res/layout/content_crop_roiresults.xml
+++ b/app/src/main/res/layout/content_crop_roiresults.xml
@@ -26,27 +26,35 @@
                 android:layout_height="wrap_content"
                 android:text="Results"
                 android:layout_margin="8dp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 android:textSize="16sp"
                 android:textAlignment="center"
-                android:textStyle="bold"
+
                 />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/divider_line_color_estimates"
+            android:orientation="horizontal"
+            android:padding="4dp"
+            android:layout_marginTop="8dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Returns Per Acre"
-                android:layout_margin="8dp"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold"
-             />
 
+                android:textColor="@color/textColor"
+                android:textSize="14sp"
+
+             />
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginStart="12dp"
                 >
 
                 <LinearLayout
@@ -66,8 +74,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/return_over_variable_costs"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -80,7 +88,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:background="@drawable/input_shapes"
+                            android:textColor="@color/textColor"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -103,8 +111,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Return Over Total Expenses"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -117,7 +125,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:background="@drawable/input_shapes"
+                            android:textColor="@color/textColor"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -125,23 +133,29 @@
                 </LinearLayout>
 
             </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/divider_line_color_estimates"
+            android:orientation="horizontal"
+            android:padding="4dp"
+            android:layout_marginTop="8dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Break-even Yield Per Acre"
-                android:layout_margin="8dp"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold"
 
-
+                android:textColor="@color/textColor"
+                android:textSize="14sp"
                  />
+        </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginStart="12dp"
                 >
 
                 <LinearLayout
@@ -160,8 +174,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/to_cover_expenses"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
                             />
                     </LinearLayout>
                     <LinearLayout
@@ -169,14 +183,14 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_weight="0.4"
-                        android:background="@color/gray_mh"
+
                         >
 
                         <TextView
                             android:id="@+id/txt_crop_roi_results_break_even_yield_cover_variable_expenses"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/input_shapes"
+                            android:textColor="@color/textColor"
                             android:text="0"
                             android:textAlignment="textEnd"
                             android:textSize="14sp"
@@ -187,7 +201,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Units"
-                            android:textColor="@color/black"
+                            android:layout_marginStart="4dp"
+                            android:textColor="@color/textColor"
                             android:textSize="14sp"
                             android:layout_weight="0.3"
                             />
@@ -210,8 +225,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="To Cover Total Expenses : "
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
                             />
                     </LinearLayout>
                     <LinearLayout
@@ -226,7 +241,7 @@
                             android:id="@+id/txt_crop_roi_results_break_even_yield_cover_total_expenses"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/input_shapes"
+                            android:textColor="@color/textColor"
                             android:text="0"
                             android:textAlignment="textEnd"
                             android:textSize="14sp"
@@ -236,7 +251,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Units"
-                            android:textColor="@color/black"
+                            android:layout_marginStart="4dp"
+                            android:textColor="@color/textColor"
                             android:textSize="14sp"
                             android:layout_weight="0.3"
                             />
@@ -245,23 +261,32 @@
                 </LinearLayout>
 
             </LinearLayout>
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Break-even Price Per Unit"
-                android:layout_margin="8dp"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                android:background="@color/divider_line_color_estimates"
+                android:orientation="horizontal"
+                android:padding="4dp"
+                android:layout_marginTop="8dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Break-even Price Per Unit"
+
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
 
 
-                />
+                    />
+            </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginStart="12dp"
                 >
 
                 <LinearLayout
@@ -280,8 +305,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/to_cover_expenses"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
                             />
                     </LinearLayout>
                     <LinearLayout
@@ -295,7 +320,7 @@
                             android:id="@+id/txt_crop_roi_results_break_even_price_cover_variable_expenses"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/input_shapes"
+                            android:textColor="@color/textColor"
                             android:text="0"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -318,8 +343,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="To Cover Total Expenses : "
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
                             />
                     </LinearLayout>
                     <LinearLayout
@@ -333,7 +358,7 @@
                             android:id="@+id/txt_crop_roi_results_break_even_price_cover_total_expenses"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/input_shapes"
+                            android:textColor="@color/textColor"
                             android:text="0"
                             android:textAlignment="textEnd"
                             android:textSize="14sp" />
@@ -346,8 +371,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:background="@color/divider_line_color_estimates"
+                android:padding="4dp"
+                android:layout_marginTop="8dp">
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -358,9 +385,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Return on Capital  "
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
+
                         />
                 </LinearLayout>
                 <LinearLayout
@@ -374,7 +401,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:background="@drawable/input_shapes"
+                        android:textColor="@color/textColor"
                         android:textAlignment="textEnd"
                         android:textSize="14sp" />
                 </LinearLayout>
