--- a/app/src/main/res/layout/content_crop_roistep1.xml
+++ b/app/src/main/res/layout/content_crop_roistep1.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Estimated Revenue"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/textColor"
             android:textSize="16sp"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -41,21 +41,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/yield_units"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
                     />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:background="@drawable/input_shapes_grey_spinner"
+                android:orientation="vertical"
                 android:layout_weight="1"
-                >
+                android:padding="2.4dp">
                 <Spinner
                     android:id="@+id/spinner_crop_roi_step_1_yield_units"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/input_shapes"
                     android:entries="@array/crop_roi_yield_units"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -78,8 +78,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Yield Per Acre"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
                     />
             </LinearLayout>
             <LinearLayout
@@ -135,8 +135,8 @@
                     android:layout_height="match_parent"
                     android:text="Average Market Price"
 
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
                     />
             </LinearLayout>
             <LinearLayout
@@ -174,8 +174,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Other Income"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
                     />
             </LinearLayout>
             <LinearLayout
@@ -212,9 +212,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Est Gross Revenue"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
                     android:textSize="16sp"
-                    android:textStyle="bold"
+
                     />
             </LinearLayout>
             <LinearLayout
@@ -222,16 +222,18 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_weight="1"
-                android:background="@color/light_gray"
+                android:background="@color/calaculators_total_color"
+                android:padding="4dp"
                 >
                 <TextView
                     android:id="@+id/txt_crop_ro1_step_1_est_gross_revenue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="textEnd"
+                    android:textAlignment="center"
                     android:layout_margin="4dp"
                     android:textStyle="bold"
-                    android:hint="@string/enter_hint"
+
+
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
@@ -258,7 +260,7 @@
                     style="@style/Button"
                     android:textColor="@color/whiteColor"
                     android:drawableRight="@drawable/arrow_right_white_24dp"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     />
             </LinearLayout>
 
