--- a/app/src/main/res/layout/content_crop_roistep4.xml
+++ b/app/src/main/res/layout/content_crop_roistep4.xml
@@ -21,9 +21,9 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:layout_margin="4dp"
-                android:textStyle="bold"
+                
                 android:text="@string/labour_and_management"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 android:textSize="16sp" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -41,9 +41,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/owner_allowance"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
+                         />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -57,10 +57,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/quantity"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         android:textAlignment="center"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textSize="14sp"
+                         />
                     <EditText
                         android:id="@+id/txt_crop_roi_step_4_owner_allowance_quantity"
                         android:layout_width="match_parent"
@@ -77,10 +77,10 @@
                     android:text="@string/multiplication_sign"
                     android:layout_gravity="bottom"
                     android:layout_marginBottom="6dp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
                     android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    
                     android:layout_weight="0.1"/>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -94,9 +94,9 @@
                         android:layout_height="wrap_content"
                         android:text="@string/cost"
                         android:textAlignment="center"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
+                         />
                     <EditText
                         android:id="@+id/txt_crop_roi_step_4_owner_allowance_cost"
                         android:layout_width="match_parent"
@@ -124,9 +124,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/salaried_employee"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
+                         />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -152,10 +152,10 @@
                     android:text="@string/multiplication_sign"
                     android:layout_gravity="bottom"
                     android:layout_marginBottom="6dp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColor"
                     android:textAlignment="center"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    
                     android:layout_weight="0.1"/>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -180,9 +180,9 @@
                 android:layout_height="wrap_content"
                 android:text="Casual Employee"
                 android:layout_margin="8dp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                 />
            
 
             <LinearLayout
@@ -207,9 +207,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Cost"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
+                             />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -236,9 +236,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/per_hour"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
+                                android:textColor="@color/textColor"
+                                android:textSize="14sp"
+                                 />
                         </LinearLayout>
                 </LinearLayout>
                     <LinearLayout
@@ -258,9 +258,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Hours"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
+                             />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -287,9 +287,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="/Week"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
+                             />
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
@@ -308,9 +308,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Weeks"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
+                     />
             </LinearLayout>
                     <LinearLayout
                 android:layout_width="0dp"
@@ -337,9 +337,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="/Year"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp"
+                     />
             </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
@@ -358,9 +358,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Total"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp"
+                             />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
@@ -398,9 +398,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/total_labour_costs"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
+                         />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -441,16 +441,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/total_expenses"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
+                         />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:background="@color/light_gray"
+                    android:background="@color/calaculators_total_color"
+                    android:padding="4dp"
                     >
                     <TextView
                         android:id="@+id/txt_crop_roi_step_4_crop_total_expenses"
@@ -459,7 +460,7 @@
                         android:enabled="false"
                         android:text="0"
                         android:layout_margin="4dp"
-                        android:textStyle="bold"
+                        
                         android:textAlignment="textEnd"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -490,8 +491,8 @@
                         style="@style/Button"
                         android:textColor="@color/whiteColor"
                         android:drawableRight="@drawable/arrow_right_white_24dp"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textSize="14sp"
+                         />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -508,8 +509,8 @@
                         style="@style/Button"
                         android:textColor="@color/whiteColor"
                         android:drawableLeft="@drawable/arrow_left_white_24dp"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textSize="14sp"
+                         />
                 </LinearLayout>
 
             </LinearLayout>
