--- a/app/src/main/res/layout/content_crop_roistep5.xml
+++ b/app/src/main/res/layout/content_crop_roistep5.xml
@@ -22,10 +22,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Capital Investment"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColor"
                 android:textSize="18sp"
                 android:textAlignment="center"
-                android:textStyle="bold"
+              
                  />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,8 +43,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/machinery_investment"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
                 <LinearLayout
@@ -83,8 +83,8 @@
                         android:layout_height="match_parent"
                         android:text="Building Investment"
 
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
                 <LinearLayout
@@ -123,8 +123,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/land_investment"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
                 <LinearLayout
@@ -164,7 +164,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/total_capital_investment"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="@color/textColor"
                         android:textSize="16sp"
                          />
                 </LinearLayout>
@@ -173,7 +173,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    android:background="@color/light_gray"
+                    android:background="@color/calaculators_total_color"
+                    android:padding="4dp"
                     >
 
                     <TextView
@@ -182,8 +183,8 @@
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
                         android:layout_margin="4dp"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                      
+                        android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
          
@@ -204,15 +205,15 @@
                     android:layout_weight="1"
                     >
                     <Button
-                        android:id="@+id/txt_crop_roi_step_5_crop_btn_next"
+                        android:id="@+id/txt_crop_roi_step_5_crop_btn_previous"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/next"
+                        android:text="@string/previous"
                         android:textAllCaps="false"
                         style="@style/Button"
                         android:textColor="@color/whiteColor"
-                        android:drawableRight="@drawable/arrow_right_white_24dp"
-                        android:textSize="16sp"
+                        android:drawableLeft="@drawable/arrow_left_white_24dp"
+                        android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
                 <LinearLayout
@@ -222,17 +223,18 @@
                     android:layout_weight="1"
                     >
                     <Button
-                        android:id="@+id/txt_crop_roi_step_5_crop_btn_previous"
+                        android:id="@+id/txt_crop_roi_step_5_crop_btn_next"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/previous"
+                        android:text="@string/next"
                         android:textAllCaps="false"
                         style="@style/Button"
                         android:textColor="@color/whiteColor"
-                        android:drawableLeft="@drawable/arrow_left_white_24dp"
-                        android:textSize="16sp"
+                        android:drawableRight="@drawable/arrow_right_white_24dp"
+                        android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
+               
 
             </LinearLayout>
         </LinearLayout>
