--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,6 +61,7 @@
     <color name="estimates_manager_button">#51925E</color>
     <color name="estimates_card_currency_color">#51925E</color>
     <color name="estimates_card_text_color">#899889</color>
+    <color name="calaculators_total_color">#D7DCD3</color>
 
 
 </resources>
